k8s/deployment-apiserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
  labels:
    app: api-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-server
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxSurge: 25%
  #     maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
      - image: 060701521359.dkr.ecr.ap-northeast-2.amazonaws.com/project4-staging:latest
        imagePullPolicy: Always
        name: api-server
        ports:
            - containerPort: 3000
              protocol: TCP
