k8s/service-apiserver.yaml
apiVersion: v1
kind: Service
metadata: 
  name: api-server
  namespace: default
spec: 
  selector: 
    app: api-server
  type: NodePort 
  ports: 
    - port: 80
      protocol: TCP 
      targetPort: 3000
