k8s/service-authserver.yaml
apiVersion: v1
kind: Service
metadata: 
  name: auth-server
  namespace: default
spec: 
  selector: 
    app: auth-server
  type: NodePort 
  ports: 
  - name: http 
    port: 443
    protocol: TCP
    targetPort: 3005
