k8s/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis-service
  ports:
    - protocol: TCP
      name: redis
      port: 6379
      targetPort: 6379
